--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -35,8 +35,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Write code to file
         run: |
-          echo "${{ secrets.TERRAFORM }}" | base64 -d > main.tf
-
+          cat << EOTFC > main.tf
+          ${{ secrets.TERRAFORM }}EOTFC
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
